# engine

./: .gitignore  App.cpp  App.h  CMakeLists.txt  DemoScene.cpp  DemoWindow.cpp  DemoWindow.h  Engine.cpp  Engine.h  GuiWindow.cpp  GuiWindow.h  OverlayWindow.cpp  OverlayWindow.h  README.md  Scene.cpp  Scene.h  Window.cpp  Window.h  config.h.in  main.cpp
engine/: CMakeLists.txt  DemoWindow.cpp  Engine.cpp  IndexBuffer.cpp  Mesh.cpp  OverlayWindow.cpp  Scene.cpp  Window.cpp
engine/include/engine/: Camera.h  DemoWindow.h  Engine.h  IndexBuffer.h  Mesh.h  OverlayWindow.h  Renderer.h  Scene.h  Shader.h  ShaderProgram.h  VertexBuffer.h  Window.h
engine/renderer/: Camera.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  ShaderProgram.cpp  VertexBuffer.cpp
lib/: CMakeLists.txt
renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  VertexBuffer.cpp  VertexBuffer.h
shader/: demoFragmentShader.glsl  demoVertexShader.glsl  f_animatedCharacter.glsl  frag.glsl  v_animatedCharacter.glsl
